packages/cli/tests/fixtures/errors/duplicate/index.ts
////////////////////////////////////////////////////////////////////////////////////

import { type AccordionStyles, accordionStyles as accordion } from "./accordion";
import { type AlertStyles, alertStyles as alert } from "./alert";
import { type AvatarStyles, avatarStyles as avatar } from "./avatar";
import { type CardStyles, cardStyles as card } from "./card";
import { type CarouselStyles, carouselStyles as carousel } from "./carousel";
import { type CheckboxStyles, checkboxStyles as checkbox } from "./checkbox";

////////////////////////////////////////////////////////////////////////////////////

export type { AccordionStyles, AlertStyles, AvatarStyles, CardStyles, CarouselStyles, CheckboxStyles };

////////////////////////////////////////////////////////////////////////////////////

export const accordionStyles = accordion;
export const alertStyles = alert;
export const avatarStyles = avatar;
export const cardStyles = card;
export const carouselStyles = carousel;
export const checkboxStyles = checkbox;

////////////////////////////////////////////////////////////////////////////////////

export const duplicates = [accordionStyles, alertStyles, avatarStyles, cardStyles, carouselStyles, checkboxStyles];

////////////////////////////////////////////////////////////////////////////////////
